# web_hobbies

./: .gitignore  .pre-commit-config.yaml  Notes  README.md  flask_app.py  helpers.py  poe_commands.py  pyproject.toml  ruff.toml  user_db.py  wsgi.py
static/: home.js  styles.css
templates/: footer.html  hobby.html  home.html  landing.html  login.html  register.html  user.html
